--- a/.github/workflows/flask_test.yml
+++ b/.github/workflows/flask_test.yml
@@ -29,4 +29,11 @@ jobs:
               with:
                 python-version: ${{ matrix.python-version }}
 
-            
+            - name: Install dependencies
+              run: |
+                python -m pip install --upgrade pip
+                pip install -r ../requirements.txt
+
+ 
+            - name: Test App Code
+              run: python ./main_test.py
