--- a/.github/workflows/last_pr_revert.yml
+++ b/.github/workflows/last_pr_revert.yml
@@ -44,7 +44,11 @@ jobs:
 
           echo "✅ Revert successful."
 
-      - name: Push Changes
-        run: |
-          echo "🚀 Pushing revert commit..."
-          git push origin main
+          - name: Push Changes
+          run: |
+            echo "🚀 Pushing revert commit..."
+            git remote set-url origin https://$GH_PAT@github.com/Sprayer1122/github-actions-demo.git
+            git push origin main
+          env:
+            GH_PAT: ${{ secrets.GH_PAT }}
+        
